--- a/views/info.erb
+++ b/views/info.erb
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
   <head>
-    <title>Information</title>
+    <title>Info Page</title>
   </head>
   <body>
-    <h1>Information</h1>
-    <p>This HTML code contains the information on this page.</p>
+    <h1>Info Page</h1>
+    <p>This is the info page: here's some information about me!</p>
   </body>
 </html>
